# prototype-aie-toolchain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/actions/setup_base/: action.yml
.github/workflows/: tests.yml  wheels.yml
.github/workflows/base/: action.yml
example/: 2kernels.py  twopi_e2e.py
examples/: .gitignore  basic.py  cdo.py  design.bif  dump.py  dump_regs.py  e2e.py  gen_example.py  gen_two_kernels_example.py  harness.py  load_xrt.py  merge_two_xclbins_through_xclbinutil.py  nopi.xclbin  pi.xclbin  twopi.elf  twopi.xclbin  xrt.py  xrt_two_kernels.py
examples/module_matmul_small_1_dispatch_0_amdaie_xclbin_fb/: module_matmul_small_1_dispatch_0_amdaie_xclbin_fb.xclbin
patches/: aie-rt.diff  apply_patches.sh  bootgen.diff  pyxrt.diff
scripts/: gen_xaie_ctypes.py  stuff.cmake
tests/: core_0_2.elf  test_basic.py  test_cdo.py  test_e2e.py  test_merge_two_xclbins_through_xclbinutil.py  test_type_ctypes_enum.py  test_xaie_ctypes.py
tests/module_matmul_large_dispatch_0_amdaie_xclbin_fb/: module_matmul_large_dispatch_0_amdaie_xclbin_fb.xclbin
tests/module_matmul_small_1_dispatch_0_amdaie_xclbin_fb/: kernels.json
util/: apply_patches.sh  bootgen.cmake  gen_cdo.py  gen_xaie_ctypes.py  helpers.cmake  pyxrt.cmake
xaiepy/: .gitignore  __init__.py  bootgen.cpp  bootgen.py  cdo.py  pyxrt.pyi  typed_ctypes_enum.py  xclbinutil.cpp  xclbinutil.py  xrt.cpp  xrt.py
